# Deja-NASA-Space-Apps-Challenge-2025

./: .gitignore  Basic outline (from chatgpt).md  LICENSE  README.md
.obsidian/: workspace.json
backend/: api.py  asteroid.db  pyproject.toml
backend/asteroid/: asteroid-load.py  asteroid-orbit.py  asteroid_load.py  asteroid_orbit.py
backend/impact/: impact.py
frontend/deja-app/: archive.html  congratulations.html  impact.html  index-archive.html  index.html  mitigation.html  package-lock.json  package.json  post-sel.html  select-asteroid.html
frontend/deja-app/launch/: index.html
frontend/deja-app/src/: asteroid.js  main.js  map.js  mitigation.js  particles.js  selected-asteroid.js  tailwind.js
frontend/godot/: camera.gd  camera.gd.uid  camera_rig.gd  camera_rig.gd.uid  control.gd  control.gd.uid  deja.png.import  deja.svg.import  dejascreen.png.import  export_presets.cfg  glow.svg.import  icon.svg.import  main.gd  main.gd.uid  node_3d.tscn  pin.png.import  project.godot  spacerock.blend  spacerock.blend.import  world.200410.3x5400x2700.png.import
