[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.118.0",
    "numpy>=2.3.3",
    "plotly>=6.3.1",
    "poliastro>=0.7.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "uvicorn>=0.37.0",
]
